k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nimage-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3001
  selector:
    app: nimage
