k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nimage-ingress
  namespace: nimage
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - api.nimage.com.br
    secretName: nimage-tls
  rules:
  - host: api.nimage.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nimage-service
            port:
              number: 80
